--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,4 +6,4 @@ test:
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://redistogo:edf3fc9a0065fe263009e10bd7ce925c@barreleye.redistogo.com:10703/
